# OS-Sec

./: .gitignore  README.md
lect/1/: tool.sh
lect/2/: Makefile
lect/2/include/: mysyslog.h  mysyslog_back.h
lect/2/misc/: control  mysyslog.service
lect/2/misc/mysyslogd/etc/mysyslog/: mysyslog.conf
lect/2/src/: mysyslog_client.c  mysyslog_daemon.c
lect/2/src/drivers/: mysyslog_json.c  mysyslog_text.c
pracs/11/: main.s
pracs/12/: CMakeLists.txt  CMakeLists.txt.bak  get_root_template.form.html
pracs/12/include/: network_exceptions.h
pracs/12/include/hashtable/: hashtable.h
pracs/12/include/http_server/: http_server.h
pracs/12/include/server/: client.h  server.h
pracs/12/src/: main.c
pracs/12/src/hashtable/: hashtable.c
pracs/12/src/http_server/: http_server.c
pracs/12/src/server/: client.c  client.cpp  example.c  example.cpp  example_tcp.c  server.c  server.cpp
pracs/2/: win-thread-example.c  win-thread-example.cpp
pracs/4/: posix-thread-example.c  posix-thread-example.cpp
pracs/9/: CMakeLists.txt
pracs/9/include/: network_exceptions.hpp  status.hpp
pracs/9/include/client/: client.hpp
pracs/9/include/server/: server.hpp
pracs/9/src/: network_exceptions.cpp
pracs/9/src/client/: client.cpp  example.cpp
pracs/9/src/server/: client.cpp  client.hpp  example.cpp  network_exceptions.cpp  network_exceptions.hpp  server.cpp  server.hpp
